gccida/g1/combine_givs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7918:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7918:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rax 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7919:1: error: use of undeclared identifier 'induction_1'
induction_1 *v3; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7919:14: error: use of undeclared identifier 'v3'
induction_1 *v3; // rdx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7926:1: error: use of undeclared identifier 'induction_1'
induction_1 **v10; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7926:15: error: use of undeclared identifier 'v10'
induction_1 **v10; // r15 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7928:1: error: use of undeclared identifier 'induction_1'
induction_1 *v12; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7928:14: error: use of undeclared identifier 'v12'; did you mean 'v11'?
induction_1 *v12; // rbx 
             ^~~
             v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7927:5: note: 'v11' declared here
int v11; // r12d 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7930:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7931:1: error: use of undeclared identifier 'induction_1'
induction_1 *v15; // r13 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7931:14: error: use of undeclared identifier 'v15'
induction_1 *v15; // r13 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7935:1: error: use of undeclared identifier 'induction_1'
induction_1 *v19; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7935:14: error: use of undeclared identifier 'v19'
induction_1 *v19; // rax 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7939:1: error: use of undeclared identifier 'induction_1'
induction_1 *v23; // r12 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7939:14: error: use of undeclared identifier 'v23'
induction_1 *v23; // r12 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7948:1: error: use of undeclared identifier 'induction_1'
induction_1 *v32; // r14 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7948:14: error: use of undeclared identifier 'v32'
induction_1 *v32; // r14 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7955:1: error: use of undeclared identifier 'induction_1'
induction_1 **v39; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/loop.c:7955:15: error: use of undeclared identifier 'v39'
induction_1 **v39; // r15 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_givs/src/obj/loop.o] Error 1
